--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,4 +50,22 @@ const { title } = Astro.props;
 	p {
 		color: #fafafa;
 	}
+
+	.post-grid {
+		display: grid;
+		gap: 1rem;
+	}
+
+	.post {
+		display: block;
+		background-color: #1a1a1a;
+		border-radius: 0.5rem;
+		padding: 1.5rem 2rem;
+		color: #fafafa;
+		text-decoration: none;
+	}
+
+	.post:hover {
+		background-color: #2a2a2a;
+	}
 </style>
